# app/concepts/api/v1/backoffice/word/operation/destroy.rb
@@ -1,0 +1,18 @@
+module API
+  module V1
+    module Backoffice
+      # Update operation
+      class Word::Operation::Destroy < API::V1::Base::Operation
+        step Rescue(handler: :error!) {
+          step Model(::Word, :find_by )
+          step :delete!
+        }
+        fail :set_status!
+
+        def delete!(ctx, model:, **)
+          model.destroy!
+        end
+      end
+    end
+  end
+end
